[project]
name = "harvesters-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "harvesters>=1.4.3",
    "pyqt6>=6.9.1",
    "vispy>=0.15.2",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"